gcc/testsuite/rust/rustc/ui/rfcs/rfc-2627-raw-dylib/raw-dylib-windows-only.rs
//@ ignore-windows
//@ compile-flags: --crate-type lib
#[link(name = "foo", kind = "raw-dylib")]
// { dg-error ".E0455." "" { target *-*-* } .-1 }
extern "C" {}

